--- a/BytePost/src/components/header/header.scss
+++ b/BytePost/src/components/header/header.scss
@@ -69,9 +69,16 @@
                     display: flex;
                     align-items: center;
                     column-gap: 3px;
+                    padding: 5px 7px;
+                    border-radius: 20px;
+                    cursor: pointer;
 
                     span{
-                        font-size: 18px;
+                        font-size: 17px;
+                    }
+
+                    &:hover{
+                        background-color: rgba(0, 0, 0, 0.055);
                     }
                 }
 
@@ -82,4 +89,8 @@
             }
         }
     }
+}
+
+@media screen and (max-width:700px) {
+    
 }
