blog posts page updated

--- a/BytePost/src/components/BlogPost/blogpost.css
+++ b/BytePost/src/components/BlogPost/blogpost.css
@@ -1,5 +1,10 @@
 .single-blg-pst {
-  display: flex;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  border-top: 1px solid rgba(128, 128, 128, 0.2);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+  width: 100%;
+  padding: 1rem 0;
 }
 .single-blg-pst .single-blg-pst-dets {
   display: flex;
@@ -12,7 +17,7 @@
   width: max-content;
   -moz-column-gap: 0.6rem;
        column-gap: 0.6rem;
-  margin-bottom: 7px;
+  margin-bottom: 8px;
 }
 .single-blg-pst .single-blg-pst-dets .blg-pst-header-section .admin-profile-pc {
   -o-object-fit: cover;
@@ -21,6 +26,7 @@
   display: flex;
   border-radius: 20px;
   overflow: hidden;
+  cursor: pointer;
 }
 .single-blg-pst .single-blg-pst-dets .blg-pst-header-section .admin-profile-pc img {
   -o-object-fit: cover;
@@ -30,6 +36,7 @@
 .single-blg-pst .single-blg-pst-dets .blg-pst-header-section .admin-name-pc {
   font-size: 1rem;
   font-weight: 700;
+  cursor: pointer;
 }
 .single-blg-pst .single-blg-pst-dets .blg-pst-header-section .admin-date-pc {
   font-size: 0.8rem;
@@ -37,9 +44,47 @@
   color: gray;
 }
 .single-blg-pst .single-blg-pst-dets .blg-pst-title-section {
-  font-size: 1.32rem;
+  font-size: 1.2rem;
   font-weight: 700;
+  display: inline-block;
+  word-break: break-all;
+  margin-bottom: 0.6rem;
+  cursor: pointer;
+  width: -moz-max-content;
+  width: max-content;
+}
+.single-blg-pst .single-blg-pst-dets .blg-pst-desc-section {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 1.4rem;
+  cursor: pointer;
+}
+.single-blg-pst .single-blg-pst-dets .category-section {
+  width: -moz-max-content;
+  width: max-content;
+  cursor: pointer;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 10px;
+  background-color: rgba(128, 128, 128, 0.068);
 }
 .single-blg-pst .single-blg-pst-poster {
-  border: 1px solid;
+  height: 110px;
+  overflow: hidden;
+  display: flex;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: auto auto;
+  width: 85%;
+  max-width: 170px;
+  cursor: pointer;
+}
+.single-blg-pst .single-blg-pst-poster img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }/*# sourceMappingURL=blogpost.css.map */
