--- a/BytePost/src/components/header/header.scss
+++ b/BytePost/src/components/header/header.scss
@@ -1,6 +1,9 @@
 .header-container{
-    padding: 13px 13px;
+    padding: 10px 13px;
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     justify-content: center;
     background-color: white;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.055);
