--- a/BytePost/src/components/mainpage/mainpage.css
+++ b/BytePost/src/components/mainpage/mainpage.css
@@ -1,7 +1,11 @@
 .main-page-content .main-page-listings {
   padding: 15px 7px;
-  border: 1px solid;
   max-width: 1200px;
   align-self: center;
+  place-items: center;
   margin: 0 auto;
+}
+.main-page-content .main-page-listings .blg-pst-pls-trnd-pls-prf {
+  display: grid;
+  grid-template-columns: 59% 40%;
 }/*# sourceMappingURL=mainpage.css.map */
